--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-react-router-transitions",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "Define transitions based on actions",
   "main": "lib/index.js",
   "scripts": {
@@ -9,6 +9,10 @@
     "prepublish": "npm run build"
   },
   "author": "Johannes Lumpe <johannes@johanneslumpe.de>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/johanneslumpe/redux-react-router-transitions.git"
+  },
   "license": "MIT",
   "devDependencies": {
     "babel": "^5.8.21"
