--- a/example/package.json
+++ b/example/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "babel-core": "^5.8.22",
     "babel-loader": "^5.3.2",
+    "history": "^1.9.0",
     "react": "^0.13.3",
-    "react-redux": "^0.9.0",
-    "react-router": "^0.13.3",
-    "redux": "^1.0.1",
+    "react-redux": "^2.1.2",
+    "react-router": "^1.0.0-rc1",
+    "redux": "^3.0.0",
     "webpack": "^1.11.0",
     "webpack-dev-server": "^1.10.1"
   },
