--- a/example/package.json
+++ b/example/package.json
@@ -13,7 +13,8 @@
     "babel-core": "^5.8.22",
     "babel-loader": "^5.3.2",
     "history": "^1.9.0",
-    "react": "^0.13.3",
+    "react": "^0.14.0-rc1",
+    "react-dom": "^0.14.0-rc1",
     "react-redux": "^2.1.2",
     "react-router": "^1.0.0-rc1",
     "redux": "^3.0.0",
